[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - A concise and general collective intelligence engine for prediction"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Khung lõi
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    
    # Liên quan đến LLM
    "openai>=1.0.0",
    
    # Zep Cloud
    "zep-cloud==3.13.0",
    
    # Mô phỏng mạng xã hội OASIS
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    
    # Xử lý tệp
    "PyMuPDF>=1.24.0",
    # Phát hiện mã hóa (hỗ trợ tệp văn bản không dùng UTF-8)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    # Thư viện tiện ích
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
